--- a/arch/arm64/configs/sea_defconfig
+++ b/arch/arm64/configs/sea_defconfig
@@ -3,6 +3,8 @@ CONFIG_CROSS_COMPILE="aarch64-linux-android-"
 CONFIG_LOCALVERSION="-feather"
 CONFIG_MODULE_FORCE_LOAD=y
 #
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mediatek/mt6781"
 WCONFIG_I2C_CHARDEV=y
 CONFIG_PREEMPT=y
 CONFIG_PERF_EVENTS=y
